# pzspec

./: .gitignore  CLAUDE.md  CONVENTIONS.md  MANIFEST.in  README.md  build_shared.sh  pyproject.toml  requirements.txt  run_tests.py  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
pzspec/: __init__.py  builder.py  cli.py  dsl.py  factory.py  junit_report.py  memory.py  mock.py  pydust.py  sentinel.py  snapshot.py  test_math.py  test_runner.py  zig_ffi.py
pzspec/coverage/: __init__.py  builder.py  collector.py  instrumenter.py  parser.py  report.py
pzspec/zig/: __init__.py  pzspec_exports.zig
usage/: README.md
usage/auto_export_demo/: .pzspec  run_demo_tests.py  test_auto_export.py
usage/auto_export_demo/src/: lib.zig  math.zig
usage/coverage_demo/: .pzspec  build.zig
usage/coverage_demo/pzspec/: test_calculator.py
usage/coverage_demo/src/: calculator.zig
usage/ecs_entities/: .pzspec  build.zig  run_tests.py
usage/ecs_entities/pzspec/: __init__.py  test_entities.py
usage/ecs_entities/src/: entities.zig
usage/factory_demo/: .pzspec  README.md
usage/factory_demo/pzspec/: test_butchery.py
usage/factory_demo/pzspec/factories/: __init__.py  butchery.py
usage/factory_demo/src/: lib.zig
usage/memory_tracking/: .pzspec  build.zig  run_tests.py
usage/memory_tracking/pzspec/: __init__.py  test_memory.py
usage/memory_tracking/src/: resources.zig
usage/payment_service/: .pzspec  build.zig  run_tests.py
usage/payment_service/pzspec/: __init__.py  test_payment.py
usage/payment_service/src/: payment.zig
usage/pydust_demo/: .gitignore  README.md  build.py  pyproject.toml  test_pydust_mathlib.py
usage/pydust_demo/pzspec/: __init__.py  test_mathlib.py
usage/pydust_demo/src/: mathlib.zig
usage/pydust_poc/: EVALUATION.md  README.md  pyproject_pydust.toml
usage/pydust_poc/pzspec/: __init__.py  test_vectors.py
usage/pydust_poc/src/: vector_pydust.zig
usage/vector_math/: .pzspec  .pzspec.example  README.md  build.zig  run_tests.py
usage/vector_math/pzspec/: test_vectors.py
usage/vector_math/pzspec/factories/: __init__.py  vectors.py
usage/vector_math/src/: vector.zig
