[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pzspec"
version = "0.1.0"
description = "Python DSL for Testing Zig Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PZSpec Contributors"}
]
keywords = ["zig", "testing", "ffi", "ctypes", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/apotema/pzspec"
Repository = "https://github.com/apotema/pzspec"
Issues = "https://github.com/apotema/pzspec/issues"

[project.scripts]
pzspec = "pzspec.cli:main"

[tool.setuptools.packages.find]
include = ["pzspec*"]
exclude = ["usage*", "tests*"]
